# alicia_modwork

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
alicia_modder/: .clang-format  .gitignore  CMakeLists.txt  README.md  conan.txt
alicia_modder/source/main/: main.cpp
alicia_modder/source/main/buffer/: buffer.cpp  buffer.hpp
alicia_modder/source/main/helpers/: filesystem.cpp  filesystem.hpp
alicia_modder/source/main/interface/: interface.cpp  interface.hpp
alicia_modder/source/main/interface/views/: data_view.cpp  data_view.hpp
alicia_modder/source/main/mod/alicia/assets/: assets_modder.cpp  assets_modder.hpp
alicia_modder/source/main/mod/alicia/game/: alicia_modder.cpp  alicia_modder.hpp
alicia_modder/source/main/mod/alicia/gametree/: GTLx.c  GTLx.h  GTLx_h.h  GTLx_i.c
alicia_modder/source/main/mod/alicia/launcher/: launcher_modder.cpp  launcher_modder.hpp
alicia_modder/source/main/tools/assets/: assets.cpp  assets.hpp  defs.hpp
alicia_modder/source/main/tools/dbg/: debugger.cpp  debugger.hpp
alicia_modder/source/main/tools/rw/: defs.hpp
code/pak/: pak_extractor.cpp  pak_reporter.cpp  report.txt
source/: main.cpp
source/buffer/: buffer.cpp  buffer.hpp
source/file/: pak.cpp  pak.hpp
source/network/: server.cpp  server.hpp
source/pak/: pak.cpp  pak.hpp
theory/: AliciaPAKFormat  AliciaPAKFormat.md
theory/assets/: models.md  pak.md
theory/booting/: gametree.md  launcher.md
theory/configuration/: cmd_variables.csv  com_variables.csv  config.md  dbg_variables.csv  phy_variables.csv  r_variables.csv  snd_variables.csv  sys_variables.csv  ui_variables.csv
theory/debugging/: debugging.md
theory/networking/: network.md
theory/scripting/: launcher_scripting.md
